k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: polaris-ems
  labels:
    app: polaris-ems
