k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polaris-ems-backend
  namespace: polaris-ems
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polaris-ems-backend
  template:
    metadata:
      labels:
        app: polaris-ems-backend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      tolerations:
        - key: "service"
          operator: "Equal"
          value: "MDMS"
          effect: "NoSchedule"
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: backend
          image: 703623468956.dkr.ecr.ap-south-1.amazonaws.com/dev/polaris-ems/backend:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: polaris-ems-backend
  namespace: polaris-ems
spec:
  selector:
    app: polaris-ems-backend
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
