k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polaris-ems-frontend
  namespace: polaris-ems
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polaris-ems-frontend
  template:
    metadata:
      labels:
        app: polaris-ems-frontend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      tolerations:
        - key: "service"
          operator: "Equal"
          value: "MDMS"
          effect: "NoSchedule"
      nodeSelector:
        kubernetes.io/arch: arm64
      volumes:
        - name: nginx-conf
          configMap:
            name: polaris-ems-nginx-conf
      containers:
        - name: frontend
          image: 703623468956.dkr.ecr.ap-south-1.amazonaws.com/dev/polaris-ems/frontend:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: polaris-ems-frontend
  namespace: polaris-ems
spec:
  selector:
    app: polaris-ems-frontend
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
